--- a/app/src/main/res/layout/activity_edit_quiz_dialog.xml
+++ b/app/src/main/res/layout/activity_edit_quiz_dialog.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -12,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="New Announcement"
+        android:text="Edit Quiz"
         android:textSize="30dp"
         android:textStyle="bold" />
 
@@ -24,7 +23,7 @@
         app:hintTextColor="#1D45C0"
         >
         <EditText
-            android:id="@+id/share_announcement_text"
+            android:id="@+id/edit_quiz_text"
             android:layout_width="300dp"
             android:inputType="textMultiLine"
             android:layout_height="wrap_content"
@@ -44,14 +43,14 @@
 
 
         <Button
-            android:id="@+id/share_announcement_share_button"
+            android:id="@+id/edit_quiz_update_button"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:text="Share"
+            android:text="Update"
             />
 
         <Button
-            android:id="@+id/share_announcement_cancel_button"
+            android:id="@+id/edit_quiz_cancel_button"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="Cancel"
