--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -109,6 +109,14 @@
         <item name="android:textColor">#000000</item>
     </style>
 
+    <style name="CardStyle">
+        <item name="android:fontFamily">@font/lato_black</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+
     fontForDisplayNameOnComment
     <style name="DialogTheme" parent="Theme.AppCompat.Light.Dialog">
         <item name="colorAccent">#1D45C0</item>
